# golem-agentic

./: .gitignore  README.md
.github/workflows/: ci.yaml
golem-ts-sdk/: package-lock.json  package.json  reflect.config.json  rollup.config.mjs  tsconfig.json  tsup.config.ts  vitest.config.ts
golem-ts-sdk/src/: agent-Initiator.ts  agent-id.ts  agent-instance-counter.ts  agent-internal.ts  agent-name.ts  agent-registry.ts  base-agent.ts  branding.ts  client-generation.ts  decorators.ts  golem_rpc_0_2_1_types.d.ts  index.ts  registry.ts  resolved-agent.ts  resolved_agent.ts  type_metadata.ts
golem-ts-sdk/tests/: arbitraries.ts  mapping.test.ts  setup.ts  test-data.ts  test-types.ts  type-utils.ts  type.mapping.test.ts  type.number.ordinal.test.ts  utils.ts  value.mapping.test.ts
golem-ts-sdk/types/: exports.d.ts  golem_agent_common.d.ts  golem_api_1_1_7_host.d.ts  golem_rpc_0_2_2_types.d.ts  wasi_clocks_0_2_3_monotonic_clock.d.ts  wasi_clocks_0_2_3_wall_clock.d.ts
ts-examples/: README.md  test.sh
ts-examples/generated_dnd/: index.mjs  module.js
ts-examples/ts-user/: .gitignore  README.md  package-lock.json  package.json  rollup.config.mjs
ts-examples/wrapper-agent/: Cargo.toml  compose.sh
ts-examples/wrapper-agent/src/: lib.rs
ts-examples/wrapper-agent/wit/: simulated-agentic.wit
ts-prototype/: .gitignore  README.md
ts-prototype/deepkit-reflect/: package-lock.json  package.json  tsconfig.json
ts-prototype/generated_dnd/: golem.yaml  module.js
ts-prototype/golem-ts-sdk/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
wit/: main.wit
(+85 files in other folders)
