[package]
name = "wrapper-agent"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.40.0" }
golem-wasm-rpc = {  git =  "https://github.com/golemcloud/golem.git", branch = "code_first_agent", default-features = false, features = ["stub"]}

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:api" = { path = "wit/deps/golem-1.x" }
"golem:rpc" = { path = "wit/deps/golem-rpc" }
"golem:agent" = { path = "wit/deps/golem-agent" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
